<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >
	
	<TextView android:layout_width="match_parent"
		    android:id="@+id/StockName"
		    android:textAppearance="?android:attr/textAppearanceLarge"
		    android:layout_height="match_parent" />
		
    <LinearLayout android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_below="@+id/StockName"
	    android:padding="5dp">
		
		<TextView android:layout_width="wrap_content"
		    android:id="@+id/PriceLabel"
		    android:text="@string/PriceLabel"
		    android:layout_height="match_parent" />	
		
		<TextView android:layout_width="wrap_content"
		    android:id="@+id/Price"
		    android:layout_marginRight="3dp"
		    android:layout_height="match_parent" />
		
		<TextView android:layout_width="wrap_content"
		    android:id="@+id/CloseLabel"
		    android:text="@string/CloseLabel"
		    android:layout_height="match_parent" />	
		    
		<TextView android:layout_width="wrap_content"
		    android:id="@+id/Close"
		    android:layout_marginRight="3dp"
		    android:layout_height="match_parent" />
		
		<TextView android:layout_width="wrap_content"
		    android:id="@+id/ChangeLabel"
		    android:text="@string/ChangeLabel"
		    android:layout_height="match_parent" />	
		    
		<TextView android:layout_width="wrap_content"
		    android:id="@+id/Change"
		    android:layout_height="match_parent" />
	</LinearLayout>
</RelativeLayout>
