<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.synkron.diamondsec.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/txtVwCustomerId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_customer_id"
        android:layout_marginTop="32dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <EditText
        android:id="@+id/edTxtCustomerID"
        android:layout_width="wrap_content"
        android:background="@drawable/rect_text_edit"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txtVwPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_password"
        android:layout_marginTop="16dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/edTxtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_text_edit"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_marginTop="17dp" />

</LinearLayout>
